modify for windows build again

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -63,6 +63,9 @@
     "xtr1common": "cpp",
     "xutility": "cpp",
     "iomanip": "cpp",
-    "chrono": "cpp"
+    "chrono": "cpp",
+    "format": "cpp",
+    "filesystem": "cpp",
+    "fstream": "cpp"
   }
 }
