--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -59,14 +59,13 @@ endif ()
 set (APP cpp_sample)
 add_executable(${APP} ${SOURCE})
 target_include_directories(${APP} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/modules)
+target_include_directories(${APP} PUBLIC ${CMAKE_SOURCE_DIR}/includes/libsample)
 
 if (${CMAKE_SYSTEM_NAME} MATCHES "Windows")
-  # 
+target_link_libraries(${APP} shape sound)
 elseif (${CMAKE_SYSTEM_NAME} MATCHES "Linux" OR ${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
-  target_link_libraries(${APP} fmt)
+  target_link_libraries(${APP} fmt shape sound)
 endif ()
-
-
 
 
 
