libsample build tested in windows environment

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -66,6 +66,31 @@
     "chrono": "cpp",
     "format": "cpp",
     "filesystem": "cpp",
-    "fstream": "cpp"
+    "fstream": "cpp",
+    "any": "cpp",
+    "array": "cpp",
+    "bitset": "cpp",
+    "charconv": "cpp",
+    "complex": "cpp",
+    "condition_variable": "cpp",
+    "csignal": "cpp",
+    "cstdarg": "cpp",
+    "forward_list": "cpp",
+    "functional": "cpp",
+    "list": "cpp",
+    "locale": "cpp",
+    "map": "cpp",
+    "optional": "cpp",
+    "set": "cpp",
+    "stack": "cpp",
+    "typeindex": "cpp",
+    "unordered_map": "cpp",
+    "variant": "cpp",
+    "xhash": "cpp",
+    "xlocbuf": "cpp",
+    "xlocmes": "cpp",
+    "xlocmon": "cpp",
+    "xloctime": "cpp",
+    "xtree": "cpp"
   }
 }
