--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,7 @@ message(STATUS "ENVIRONMENT OS: ${CMAKE_SYSTEM_NAME}")
 if (${CMAKE_SYSTEM_NAME} MATCHES "Windows")
   message(STATUS "PLATFORM TOOLSET: ${CMAKE_VS_PLATFORM_TOOLSET}, SDKVER: ${CMAKE_VS_WINDOWS_TARGET_PLATFORM_VERSION}, TARGETVER: ${CMAKE_SYSTEM_VERSION}")
   # x86, x64, ...
+  set(CMAKE_GENERATOR_PLATFORM "x64")
   set(CMAKE_VS_PLATFORM_TOOLSET_HOST_ARCHITECTURE "x64")
   set(TARGET_ARCH ${CMAKE_VS_PLATFORM_TOOLSET_HOST_ARCHITECTURE}) 
   message(STATUS "GENERATOR TOOLSET: ${CMAKE_GENERATOR_TOOLSET}")
@@ -23,7 +24,7 @@ if (${CMAKE_SYSTEM_NAME} MATCHES "Windows")
   
   set(CMAKE_CXX_FLAGS "/W3 /EHsc /wd4109") # /WX -> all warings are errors
   string(REGEX REPLACE "/W[1-4]" "/W1" CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
-  set(CMAKE_CXX_FLAGS_DEBUG "/ZI") # /ZI	Includes debug information in a program database compatible with Edit and Continue. (x86 only)
+  set(CMAKE_CXX_FLAGS_DEBUG "/ZI") # /ZI	Includes debug information in a program database compatible with Edit and Continue. (x64 only)
   set(CMAKE_CXX_FLAGS_RELEASE "/O2") # /O2	Creates fast code.
   set(CMAKE_CXX_FLAGS_MINSIZEREL "/Os") # /Os	Favors small code.
   set(CMAKE_CXX_FLAGS_RELWITHDEBINFO "/O2 /Zi") # /Zi	Generates complete debugging information.
@@ -42,29 +43,46 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${OUTPUT_DIR}/${CMAKE_SYSTEM_NAME}/${TARGET_A
 
 
 
+
+# library packages
+include(FetchContent)
+FetchContent_Declare(
+  pqxx
+  URL https://github.com/jtv/libpqxx/archive/refs/tags/7.8.1.zip
+  SOURCE_DIR ${CMAKE_SOURCE_DIR}/dependencies/pqxx
+  )
+FetchContent_MakeAvailable(pqxx)
+
+
 # source files
 if (${CMAKE_SYSTEM_NAME} MATCHES "Windows")
-set(SOURCE
-  modules/sample_module.cppm
-  modules/ring_buffer.cpp
-  modules/alog.cppm
-  main.cpp
-)  
+  set(SOURCE
+    modules/sample_module.cppm
+    modules/ring_buffer.cpp
+    modules/alog.cppm
+    # sample/sql_postgre.cpp
+    main.cpp
+  )  
 elseif (${CMAKE_SYSTEM_NAME} MATCHES "Linux" OR ${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
-set(SOURCE
-  modules/ring_buffer.cpp
-  main.cpp
-)  
+
+  set(SOURCE
+    modules/ring_buffer.cpp
+    main.cpp
+  )  
+
 endif ()
 set (APP cpp_sample)
+
 add_executable(${APP} ${SOURCE})
+
 target_include_directories(${APP} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/modules)
 target_include_directories(${APP} PUBLIC ${CMAKE_SOURCE_DIR}/includes/libsample)
+target_include_directories(${APP} PUBLIC ${CMAKE_SOURCE_DIR}/dependencies/pqxx/include)
 
 if (${CMAKE_SYSTEM_NAME} MATCHES "Windows")
-  target_link_libraries(${APP} shape sound)
+  target_link_libraries(${APP} pqxx shape sound)
 elseif (${CMAKE_SYSTEM_NAME} MATCHES "Linux" OR ${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
-  target_link_libraries(${APP} fmt shape sound)
+  target_link_libraries(${APP} pqxx fmt shape sound)
 endif ()
 
 
