--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -92,6 +92,9 @@
     "xlocmon": "cpp",
     "xloctime": "cpp",
     "xtree": "cpp",
-    "unordered_set": "cpp"
+    "unordered_set": "cpp",
+    "numeric": "cpp",
+    "regex": "cpp",
+    "source_location": "cpp"
   }
 }
